--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.min.css?_v=20220902104940">
+    <link rel="stylesheet" href="css/style.min.css?_v=20220902144030">
     <title>Територія реабілітації</title>
 </head>
 
@@ -59,18 +59,15 @@
 
                         <div class="home__subtitle subtitle-home">
                             <div class="subtitle-home__item">
-                                <!--<span class="lng-subtitle-home__item-1">від</span>-->
-                                <span class="subtitle-home__item-1">→</span>
-                                <h2 class="subtitle-home__text lng-subtitle-home__text-1">Прихисток</h2>
+                                <span class="lng-subtitle-home__item-1">від</span>
+                                <h2 class="subtitle-home__text lng-subtitle-home__text-1">Прихистоку</h2>
                             </div>
                             <div class="subtitle-home__item">
-                                <!--<span class="lng-subtitle-home__item-2">до</span>-->
-                                <span class="subtitle-home__item-2">→</span>
+                                <span class="lng-subtitle-home__item-2">до</span>
                                 <h2 class="subtitle-home__text lng-subtitle-home__text-2">Реабілітації</h2>
                             </div>
                             <div class="subtitle-home__item">
-                                <!--<span class="lng-subtitle-home__item-3">та</span>-->
-                                <span class="subtitle-home__item-3">→</span>
+                                <span class="lng-subtitle-home__item-3">та</span>
                                 <h2 class="subtitle-home__text lng-subtitle-home__text-3">Створення бізнесу</h2>
                             </div>
                         </div>
@@ -90,13 +87,13 @@
                                     <span>Усі</span>
                                 </div>
                                 <div class="filter-needs__item" data-filter="01">
-                                    <span>Проживання</span>
+                                    <span>Прихисток</span>
                                 </div>
                                 <div class="filter-needs__item" data-filter="02">
                                     <span>Реабілітація</span>
                                 </div>
                                 <div class="filter-needs__item" data-filter="03">
-                                    <span>Просвіта</span>
+                                    <span>Створення бізнесу</span>
                                 </div>
 
                             </div>
@@ -105,6 +102,16 @@
 
                             <div class="swiper needs-swiper">
                                 <div class="swiper-wrapper">
+                                    <a href="#" class="03 swiper-slide needs-slide">
+                                        <div class="needs-slide__img">
+                                            <picture><source srcset="img/needs/08.webp"type="image/webp"><img src="img/needs/08.jpg" alt=""></picture>
+                                        </div>
+                                        <div class="needs-slide__desc">
+                                            <p class="needs-slide__title">Трактор для збору лікартських трав та обробки
+                                                землі </p>
+                                            <p class="needs-slide__price">Вартість: <span>500 000,00 грн</span></p>
+                                        </div>
+                                    </a>
                                     <a href="#" class="01 swiper-slide needs-slide">
                                         <div class="needs-slide__img">
                                             <picture><source srcset="img/needs/01.webp"type="image/webp"><img src="img/needs/01.jpg" alt=""></picture>
@@ -124,8 +131,7 @@
                                         </div>
                                     </a>
                                     <a href="#" class="01 swiper-slide needs-slide">
-                                        <div class="needs-slide__img">
-                                            <picture><source srcset="img/needs/03.webp"type="image/webp"><img src="img/needs/03.jpg" alt=""></picture>
+                                        <div class="needs-slide__img" <picture><source srcset="img/needs/03.webp"type="image/webp"><img src="img/needs/03.jpg" alt=""></picture>
                                         </div>
                                         <div class="needs-slide__desc">
                                             <p class="needs-slide__title">Придбання сміттєвих контейнерів 15
@@ -143,7 +149,7 @@
                                             <p class="needs-slide__price">Вартість: <span>35 497 грн.</span></p>
                                         </div>
                                     </a>
-                                    <a href="#" class="03 swiper-slide needs-slide">
+                                    <a href="#" class="01 swiper-slide needs-slide">
                                         <div class="needs-slide__img">
                                             <picture><source srcset="img/00.webp"type="image/webp"><img src="img/00.jpg" alt=""></picture>
                                         </div>
@@ -153,7 +159,7 @@
                                             <p class="needs-slide__price">Вартість: <span>138 333 грн.</span></p>
                                         </div>
                                     </a>
-                                    <a href="#" class="02 swiper-slide needs-slide">
+                                    <a href="#" class="01 swiper-slide needs-slide">
                                         <div class="needs-slide__img">
                                             <picture><source srcset="img/00.webp"type="image/webp"><img src="img/00.jpg" alt=""></picture>
                                         </div>
@@ -173,6 +179,7 @@
                                             <p class="needs-slide__price">Вартість: <span>956 819,00 грн</span></p>
                                         </div>
                                     </a>
+
 
 
                                 </div>
@@ -575,7 +582,94 @@
                     </div>
                 </div>
             </div>
+            <div class="report">
+                <div class='report__container'>
+                    <h3 class="report__title title">Звіт</h3>
+                    <div class="report__body">
+                        <div class="report__item item-report">
+                            <div class="item-report__body">
+                                <p class="item-report__title">Прихисток</p>
+                                <div class="item-report__boxs">
+                                    <div class="item-report__box">
+                                        <p class="item-report__name">
+                                            Встановлено вуличні фонарі у селах Росохи та Волошиново</p>
+                                        <p class="item-report__price">50 шт.</p>
+                                    </div>
+                                    <div class="item-report__box">
+                                        <p class="item-report__name">
+                                            Придбано підсилювачі мобільного звязку</p>
+                                        <p class="item-report__price">2 шт.</p>
+                                    </div>
+                                    <div class="item-report__box">
+                                        <p class="item-report__name">
+                                            Придбано сміттєві контейнери підсилювачі мобільного звязку</p>
+                                        <p class="item-report__count">15 шт.</p>
+                                    </div>
+                                </div>
+                                <a href="#" class="item-report__link">Дивитися повний звіт →</a>
+                            </div>
+                        </div>
+                        <div class="report__item item-report">
+                            <div class="item-report__body">
+                                <p class="item-report__title">Реабілітація</p>
+                                <div class="item-report__boxs">
+                                    <div class="item-report__box">
+                                        <p class="item-report__name">
+                                            Встановлено вуличні фонарі у селах Росохи та Волошиново</p>
+                                        <p class="item-report__price">50 шт.</p>
+                                    </div>
+                                    <div class="item-report__box">
+                                        <p class="item-report__name">
+                                            Придбано підсилювачі мобільного звязку</p>
+                                        <p class="item-report__price">2 шт.</p>
+                                    </div>
+                                    <div class="item-report__box">
+                                        <p class="item-report__name">
+                                            Придбано сміттєві контейнери підсилювачі мобільного звязку</p>
+                                        <p class="item-report__price">15 шт.</p>
+                                    </div>
+                                </div>
+                                <a href="#" class="item-report__link">Дивитися повний звіт →</a>
+                            </div>
+                        </div>
+                        <div class="report__item item-report">
+                            <div class="item-report__body">
+                                <p class="item-report__title">Створенння бізнесу</p>
+                                <div class="item-report__boxs">
+                                    <div class="item-report__box">
+                                        <p class="item-report__name">
+                                            Встановлено вуличні фонарі у селах Росохи та Волошиново</p>
+                                        <p class="item-report__price">50 шт.</p>
+                                    </div>
+                                    <div class="item-report__box">
+                                        <p class="item-report__name">
+                                            Встановлено вуличні фонарі у селах Росохи та Волошиново</p>
+                                        <p class="item-report__price">50 шт.</p>
+                                    </div>
+                                    <div class="item-report__box">
+                                        <p class="item-report__name">
+                                            Встановлено вуличні фонарі у селах Росохи та Волошиново</p>
+                                        <p class="item-report__price">50 шт.</p>
+                                    </div>
+                                    <div class="item-report__box">
+                                        <p class="item-report__name">
+                                            Придбано підсилювачі мобільного звязку</p>
+                                        <p class="item-report__price">2 шт.</p>
+                                    </div>
+                                    <div class="item-report__box">
+                                        <p class="item-report__name">
+                                            Придбано сміттєві контейнери підсилювачі мобільного звязку</p>
+                                        <p class="item-report__price">15 шт.</p>
+                                    </div>
+                                </div>
+                                <a href="#" class="item-report__link">Дивитися повний звіт →</a>
+                            </div>
+                        </div>
 
+
+                    </div>
+                </div>
+            </div>
             <div class="activity">
                 <div class='activity__container'>
                     <h3 class="activity__title title">Напрямки діяльності</h3>
@@ -761,8 +855,8 @@
 
 </footer>
         </div>
-        <script src="js/lang.js?_v=20220902104940"></script>
-        <script src="js/app.min.js?_v=20220902104940"></script>
+        <script src="js/lang.js?_v=20220902144030"></script>
+        <script src="js/app.min.js?_v=20220902144030"></script>
 
 
 
