--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.min.css?_v=20220903120241">
+    <link rel="stylesheet" href="css/style.min.css?_v=20220903133040">
     <title>Територія реабілітації</title>
 </head>
 
@@ -228,7 +228,9 @@
                         </div>
                         <div class="about__right content-about">
                             <div class="content-about__body">
+                                <!--!-------------- Історія--------------  -->
                                 <div class="t1 _active content-about__items content-about__items-boxs about-box">
+                                    <!-- Приватана садиба “Росохи SAS NEST” -->
                                     <div class="about-box__item">
                                         <div class="about-box__body">
                                             <div class="about-box__img">
@@ -255,6 +257,7 @@
                                             </div>
                                         </div>
                                     </div>
+                                    <!-- Мистецька резиденція “Росохи SAS NEST” -->
                                     <div class="about-box__item">
                                         <div class="about-box__body">
                                             <div class="about-box__img">
@@ -293,6 +296,7 @@
                                             </div>
                                         </div>
                                     </div>
+                                    <!-- Угода про партнерство та співпрацю ГО “ЄВРОПЕЙСЬКА ІНТЕГРАЦІЯ УКРАЇНИ” -->
                                     <div class="about-box__item">
                                         <div class="about-box__body">
                                             <div class="about-box__img">
@@ -314,6 +318,7 @@
                                             </div>
                                         </div>
                                     </div>
+                                    <!-- Мистецьку резиденцію перетворено на прихисток -->
                                     <div class="about-box__item">
                                         <div class="about-box__body">
                                             <div class="about-box__img">
@@ -341,6 +346,7 @@
                                             </div>
                                         </div>
                                     </div>
+                                    <!-- Співпраця з ГО “Люди без обмежень” -->
                                     <div class="about-box__item">
                                         <div class="about-box__body">
                                             <div class="about-box__img">
@@ -360,12 +366,14 @@
                                                     окремих помешкань, що приймають
                                                     біженців.
                                                 </p>
-                                                <a href="https://evrointegracia.org.ua/?p=1950" target="_blank"
-                                                    class="lng-about-5-link about-box__link">
+                                                <a href="https://drive.google.com/file/d/1R96wurrvzOkpd9nndZmwGJuUfG3rn6n3/view?usp=sharing"
+                                                    target="_blank" class="lng-about-5-link about-box__link">
                                                     Список потреб →</a>
                                             </div>
                                         </div>
                                     </div>
+                                    <!-- Співпраця з
+                                                    OUEST-FRANCE SOLIDARITE -->
                                     <div class="about-box__item">
                                         <div class="about-box__body">
                                             <div class="about-box__img">
@@ -397,6 +405,7 @@
                                             </div>
                                         </div>
                                     </div>
+                                    <!-- Додаткова Угода пропартнерство та співпрацю з ГО “ЄВРОПЕЙСЬКА ІНТЕГРАЦІЯ УКРАЇНИ” -->
                                     <div class="about-box__item">
                                         <div class="about-box__body">
                                             <div class="about-box__img">
@@ -404,10 +413,9 @@
                                             </div>
                                             <div class="about-box__desc">
                                                 <span class="lng-about-7-year about-box__year">16.05.2022 рік</span>
-                                                <p class="lng-about-7-title about-box__title">Додаткова Угода про
-                                                    партнерство та співпрацю
-                                                    з ГО “ЄВРОПЕЙСЬКА
-                                                    ІНТЕГРАЦІЯ УКРАЇНИ”</p>
+                                                <p class="lng-about-7-title about-box__title">Додаткова Угода
+                                                    пропартнерство та співпрацю з ГО “ЄВРОПЕЙСЬКА ІНТЕГРАЦІЯ УКРАЇНИ”
+                                                </p>
                                                 <p class="lng-about-7-text about-box__text">
                                                     Допомоги українським художникам
                                                     та їх сім’ям у військовий час
@@ -418,6 +426,7 @@
                                         </div>
                                     </div>
                                 </div>
+                                <!--!-------------- Місія-------------  -->
                                 <div class="t2 content-about__items content-about__items-boxs-t about-box-t about-box">
                                     <p class="lng-about-mission-subtitle about-box-t__subtitle">Створення постійних умов
                                         для комплексного
@@ -459,6 +468,7 @@
                                         робити, чого не можна робити. І нема нікого, хто би
                                         їм допомагав. </p>
                                 </div>
+                                <!--!-------------- Партнери--------------  -->
                                 <div class="t3 content-about__items content-about__items-boxs about-box">
                                     <div class="about-box__item">
                                         <div class="about-box__body">
@@ -623,8 +633,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <!--<div class="t4 content-about__items content-about__items-boxs-t about-box-t about-box">
-                            </div>-->
+
                             </div>
                         </div>
                     </div>
@@ -634,14 +643,15 @@
                 <div class='report__container'>
                     <h3 class="report__title title">Звіт</h3>
                     <div class="report__body">
+                        <!-- Прихисток -->
                         <div class="report__item item-report">
                             <div class="item-report__body">
                                 <p class="item-report__title">Прихисток</p>
                                 <div class="item-report__boxs">
                                     <div class="item-report__box">
                                         <p class="item-report__name">
-                                            Встановлено вуличні фонарі у селах Росохи та Волошиново</p>
-                                        <p class="item-report__price">50 шт.</p>
+                                            Придбано комп’ютерну техніки (комп’ютер, принтер, мобільний телефон)</p>
+                                        <!--<p class="item-report__price">50 шт.</p>-->
                                     </div>
                                     <div class="item-report__box">
                                         <p class="item-report__name">
@@ -650,71 +660,87 @@
                                     </div>
                                     <div class="item-report__box">
                                         <p class="item-report__name">
-                                            Придбано сміттєві контейнери підсилювачі мобільного звязку</p>
-                                        <p class="item-report__count">15 шт.</p>
+                                            Облаштування дитячих споривно-ігрових майданчиків в с. Росохи та с.
+                                            Волошиново
+                                        </p>
+                                        <!--<p class="item-report__count">15 шт.</p>-->
+                                    </div>
+                                    <div class="item-report__box">
+                                        <p class="item-report__name">
+                                            Облаштовано навчальний клас та ігрову кімнату для дітей біженців у селі
+                                            Росохи
+                                        </p>
+                                        <!--<p class="item-report__count">15 шт.</p>-->
+                                    </div>
+                                    <div class="item-report__box">
+                                        <p class="item-report__name">
+                                            Проведення вуличного освітлення у селах Росохи та Волошиново
+                                        </p>
+                                        <!--<p class="item-report__count">15 шт.</p>-->
+                                    </div>
+                                    <div class="item-report__box">
+                                        <p class="item-report__name">
+                                            Придбання сміттєвих контейнерів </p>
+                                        <p class="item-report__price">15 шт.</p>
+                                    </div>
+                                    <div class="item-report__box">
+                                        <p class="item-report__name">
+                                            Придбання товарів дітям для організації дозвілля та їх розвитку
+                                        </p>
+                                        <!--<p class="item-report__count">15 шт.</p>-->
+                                    </div>
+                                    <div class="item-report__box">
+                                        <p class="item-report__name">
+                                            Проведення благоустрою на території приватної садиби Rosokhy SAS NEST
+                                        </p>
+                                        <!--<p class="item-report__count">15 шт.</p>-->
+                                    </div>
+                                    <div class="item-report__box">
+                                        <p class="item-report__name">
+                                            Закупівля продуктів харчування для біженців
+                                        </p>
+                                        <!--<p class="item-report__count">15 шт.</p>-->
+                                    </div>
+                                    <div class="item-report__box">
+                                        <p class="item-report__name">
+                                            Закупівля медикаментів для біженців
+                                        </p>
+                                        <!--<p class="item-report__count">15 шт.</p>-->
                                     </div>
                                 </div>
                                 <a href="#" class="item-report__link">Дивитися повний звіт →</a>
                             </div>
                         </div>
+                        <!-- Реабілітація -->
                         <div class="report__item item-report">
                             <div class="item-report__body">
                                 <p class="item-report__title">Реабілітація</p>
                                 <div class="item-report__boxs">
                                     <div class="item-report__box">
                                         <p class="item-report__name">
-                                            Встановлено вуличні фонарі у селах Росохи та Волошиново</p>
-                                        <p class="item-report__price">50 шт.</p>
+                                            Облаштування спа кімнати</p>
+                                        <!--<p class="item-report__price">50 шт.</p>-->
                                     </div>
-                                    <div class="item-report__box">
-                                        <p class="item-report__name">
-                                            Придбано підсилювачі мобільного звязку</p>
-                                        <p class="item-report__price">2 шт.</p>
-                                    </div>
-                                    <div class="item-report__box">
-                                        <p class="item-report__name">
-                                            Придбано сміттєві контейнери підсилювачі мобільного звязку</p>
-                                        <p class="item-report__price">15 шт.</p>
-                                    </div>
+
                                 </div>
                                 <a href="#" class="item-report__link">Дивитися повний звіт →</a>
                             </div>
                         </div>
+                        <!-- Створенння бізнесу -->
                         <div class="report__item item-report">
                             <div class="item-report__body">
                                 <p class="item-report__title">Створенння бізнесу</p>
                                 <div class="item-report__boxs">
                                     <div class="item-report__box">
                                         <p class="item-report__name">
-                                            Встановлено вуличні фонарі у селах Росохи та Волошиново</p>
-                                        <p class="item-report__price">50 шт.</p>
+                                            Обробелно поле та засаджено шафран</p>
+                                        <!--<p class="item-report__price">50 шт.</p>-->
                                     </div>
-                                    <div class="item-report__box">
-                                        <p class="item-report__name">
-                                            Встановлено вуличні фонарі у селах Росохи та Волошиново</p>
-                                        <p class="item-report__price">50 шт.</p>
-                                    </div>
-                                    <div class="item-report__box">
-                                        <p class="item-report__name">
-                                            Встановлено вуличні фонарі у селах Росохи та Волошиново</p>
-                                        <p class="item-report__price">50 шт.</p>
-                                    </div>
-                                    <div class="item-report__box">
-                                        <p class="item-report__name">
-                                            Придбано підсилювачі мобільного звязку</p>
-                                        <p class="item-report__price">2 шт.</p>
-                                    </div>
-                                    <div class="item-report__box">
-                                        <p class="item-report__name">
-                                            Придбано сміттєві контейнери підсилювачі мобільного звязку</p>
-                                        <p class="item-report__price">15 шт.</p>
-                                    </div>
+
                                 </div>
                                 <a href="#" class="item-report__link">Дивитися повний звіт →</a>
                             </div>
                         </div>
-
-
                     </div>
                 </div>
             </div>
@@ -796,7 +822,6 @@
                     </div>
                 </div>
             </div>
-
             <div class="articles">
                 <div class='articles__container'>
                     <h3 class="lng-news-title articles__title title">Новини</h3>
@@ -871,7 +896,6 @@
                 </div>
 
             </div>
-
             <div class="contacts">
                 <div class='contacts__container'>
                     <div class="contacts__body">
@@ -904,8 +928,8 @@
 
 </footer>
         </div>
-        <script src="js/lang.js?_v=20220903120241"></script>
-        <script src="js/app.min.js?_v=20220903120241"></script>
+        <script src="js/lang.js?_v=20220903133040"></script>
+        <script src="js/app.min.js?_v=20220903133040"></script>
 
 
 
