--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.min.css?_v=20220903133040">
+    <link rel="stylesheet" href="css/style.min.css?_v=20220905142817">
     <title>Територія реабілітації</title>
 </head>
 
@@ -22,19 +22,19 @@
                 <nav class="menu__body">
                     <ul class="menu__list">
                         <li class="menu__item">
-                            <a data-goto=".needs" href="#" class="menu__link lng-header-1">Потреби</a>
+                            <a data-goto=".needs__container" href="#" class="menu__link lng-header-1">Потреби</a>
                         </li>
                         <li class="menu__item">
-                            <a data-goto=".about" href="#" class="menu__link lng-header-2"> Про нас </a>
+                            <a data-goto=".about__container" href="#" class="menu__link lng-header-2"> Про нас </a>
                         </li>
                         <li class="menu__item">
-                            <a data-goto=".activity" href="#" class="menu__link lng-header-3">Діяльність</a>
+                            <a data-goto=".activity__container" href="#" class="menu__link lng-header-3">Діяльність</a>
                         </li>
                         <li class="menu__item">
-                            <a data-goto=".articles" href="#" class="menu__link lng-header-4"> Новини </a>
+                            <a data-goto=".articles__container" href="#" class="menu__link lng-header-4"> Новини </a>
                         </li>
                         <li class="menu__item">
-                            <a data-goto=".contacts" href="#" class="menu__link lng-header-5">Контакти</a>
+                            <a data-goto=".contacts__container" href="#" class="menu__link lng-header-5">Контакти</a>
                         </li>
 
                     </ul>
@@ -213,7 +213,7 @@
                         <div class="about__left">
                             <div class="about__navigation">
                                 <div data-tab-name="t1" class="_active about__navigation-item">
-                                    <p class="about__navigation-text lng-his-m">Історія</p>
+                                    <p class=" about__navigation-text lng-his-m">Історія</p>
                                 </div>
                                 <div data-tab-name="t2" class="about__navigation-item">
                                     <p class="about__navigation-text lng-mis-m">Місія</p>
@@ -221,9 +221,8 @@
                                 <div data-tab-name="t3" class="about__navigation-item">
                                     <p class="about__navigation-text lng-par-m">Партнери</p>
                                 </div>
-                                <!--<div data-tab-name="t4" class="about__navigation-item">
-                                <p class="about__navigation-text">Рахунки</p>
-                            </div>-->
+
+
                             </div>
                         </div>
                         <div class="about__right content-about">
@@ -928,8 +927,8 @@
 
 </footer>
         </div>
-        <script src="js/lang.js?_v=20220903133040"></script>
-        <script src="js/app.min.js?_v=20220903133040"></script>
+        <script src="js/lang.js?_v=20220905142817"></script>
+        <script src="js/app.min.js?_v=20220905142817"></script>
 
 
 
