--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google" content="notranslate">
-    <link rel="stylesheet" href="css/style.min.css?_v=20220905182123">
+    <link rel="stylesheet" href="css/style.min.css?_v=20220905204614">
     <title>Територія реабілітації</title>
 </head>
 
@@ -117,7 +117,7 @@
                                             <div class="needs-slide__cost">
                                                 <p class="needs-slide__price-t lng-price-tr">Вартість: </p>
                                                 <div class="needs-slide__price-c">
-                                                    <span class="needs-slide__price-sum">500 000 </span>
+                                                    <span class="needs-slide__price-sum"> </span>
                                                     <span class="needs-slide__price-currency lng-currency">грн.</span>
                                                 </div>
                                             </div>
@@ -134,7 +134,7 @@
                                             <div class="needs-slide__cost">
                                                 <p class="needs-slide__price-t lng-price-sl">Вартість: </p>
                                                 <div class="needs-slide__price-c">
-                                                    <span class="needs-slide__price-sum">600 000 </span>
+                                                    <span class="needs-slide__price-sum"> </span>
                                                     <span
                                                         class="needs-slide__price-currency lng-currency-sl">грн.</span>
                                                 </div>
@@ -151,7 +151,7 @@
                                             <div class="needs-slide__cost">
                                                 <p class="needs-slide__price-t lng-price-mb">Вартість: </p>
                                                 <div class="needs-slide__price-c">
-                                                    <span class="needs-slide__price-sum">600 000 </span>
+                                                    <span class="needs-slide__price-sum"> </span>
                                                     <span
                                                         class="needs-slide__price-currency lng-currency-mb">грн.</span>
                                                 </div>
@@ -169,7 +169,7 @@
                                             <div class="needs-slide__cost">
                                                 <p class="needs-slide__price-t lng-price-gc">Вартість: </p>
                                                 <div class="needs-slide__price-c">
-                                                    <span class="needs-slide__price-sum">232 500 </span>
+                                                    <span class="needs-slide__price-sum"> </span>
                                                     <span
                                                         class="needs-slide__price-currency lng-currency-gc">грн.</span>
                                                 </div>
@@ -186,7 +186,7 @@
                                             <div class="needs-slide__cost">
                                                 <p class="needs-slide__price-t lng-price-ct">Вартість: </p>
                                                 <div class="needs-slide__price-c">
-                                                    <span class="needs-slide__price-sum">35 497 </span>
+                                                    <span class="needs-slide__price-sum"> </span>
                                                     <span
                                                         class="needs-slide__price-currency lng-currency-ct">грн.</span>
                                                 </div>
@@ -893,8 +893,8 @@
 </footer>
         </div>
     </div>
-    <script src="js/lang.js?_v=20220905182123"></script>
-    <script src="js/app.min.js?_v=20220905182123"></script>
+    <script src="js/lang.js?_v=20220905204614"></script>
+    <script src="js/app.min.js?_v=20220905204614"></script>
 
 
 
